--- a/holidaze/package.json
+++ b/holidaze/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
@@ -30,7 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "vite": "^7.2.2"
   }
