--- a/holidaze/package.json
+++ b/holidaze/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css,html,json,md}"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
