--- a/holidaze/package.json
+++ b/holidaze/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.9.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
   },
